--- a/apps/web/src/components/navbar.module.css
+++ b/apps/web/src/components/navbar.module.css
@@ -3,6 +3,10 @@
   flex-direction: column;
 }
 
+.logo {
+  width: 1.25rem;
+}
+
 .container {
   height: 4rem;
   padding-bottom: 0;
@@ -27,7 +31,7 @@ a {
   color: var(--color-text);
 }
 
-a:nth-child(1) {
+a:nth-child(2) {
   color: var(--color-accent);
 }
 
@@ -47,6 +51,9 @@ a:nth-child(1) {
 @media only screen and (max-width: 450px) {
   /* Hide last link on small screens for now */
   a:nth-child(3) {
+    display: none;
+  }
+  a:nth-child(4) {
     display: none;
   }
 }
