--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -9,6 +9,7 @@
   --color-text-light: #40404066;
   --color-text: #404040;
 
+  --color-card: #fff7f5;
   --color-card-stroke: #e5dddb;
 
   --color-accent-light: #ffdacf;
