--- a/apps/web/src/components/card.module.css
+++ b/apps/web/src/components/card.module.css
@@ -1,33 +1,60 @@
 .container {
-  background-color: var(--color-background-dark);
+  background-color: var(--color-card);
   border-radius: 1rem;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border: 1px solid var(--color-card-stroke);
+  box-shadow: 2px 2px 25px 2px rgba(0, 0, 0, 0.1);
+}
+/* Image */
+.img_container {
+  width: 100%;
+  height: 14rem;
+  padding: 1rem;
 }
 
 .cover_img {
   width: 100%;
-  height: 14rem;
+  height: 100%;
   object-fit: cover;
+  border-radius: 0.75rem;
 }
 
+/* Description */
 .info_cont {
   padding: 1rem;
+  padding-top: 0;
 }
 .info_title {
-  font-size: 1.25rem;
-  color: var(--color-text-light);
+  font-size: 1.1rem;
+  color: var(--color-text);
 }
 .info_desc {
-  margin-top: 0.5rem;
-  color: var(--color-text-dark);
+  color: var(--color-text-light);
+  font-size: 0.85rem;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.buy_cont {
-  margin-top: 1rem;
+.sub_info_cont {
+  padding: 0.5rem;
   display: flex;
   justify-content: space-between;
-  color: var(--color-text-dark);
+  align-items: center;
+}
+
+.symbol_img {
+  max-width: 20%;
+}
+.prop {
+  font-size: 0.85rem;
+  font-weight: 600;
+}
+.acc_col {
+  font-weight: 600;
+  color: var(--color-accent);
 }
