update: make filter btn beautiful

--- a/apps/web/src/components/ui/button.module.css
+++ b/apps/web/src/components/ui/button.module.css
@@ -8,6 +8,10 @@
   outline: 1px solid transparent;
   cursor: pointer;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   text-transform: uppercase;
 }
 
