--- a/apps/web/src/components/card.module.css
+++ b/apps/web/src/components/card.module.css
@@ -48,6 +48,7 @@
 
 .sub_info_cont {
   padding: 0.5rem;
+  padding-bottom: 0.85rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
