--- a/apps/web/src/components/ui/button.module.css
+++ b/apps/web/src/components/ui/button.module.css
@@ -26,6 +26,12 @@
   font-size: 0.7rem;
 }
 
+.round {
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: var(--color-accent-light);
+}
+
 .button_cont:hover {
   outline-color: var(--color-card-stroke);
   box-shadow: 2px 2px 10px 2px rgba(255, 160, 140, 0.4);
