update: add login page

--- a/apps/web/src/pages/profile.module.css
+++ b/apps/web/src/pages/profile.module.css
@@ -22,7 +22,6 @@
   box-shadow: 2px 2px 25px 2px rgba(0, 0, 0, 0.1);
   text-decoration: none;
   font-family: inherit;
-  cursor: pointer;
 }
 /* Image */
 .img_container {
@@ -50,10 +49,6 @@
 .info_desc {
   color: var(--color-text-light);
   font-size: 0.85rem;
-
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .price {
@@ -86,4 +81,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media only screen and (max-width: 450px) {
+  .container {
+    border-radius: 0;
+  }
 }
