update: add favs page

--- a/apps/web/src/components/items-grid.module.css
+++ b/apps/web/src/components/items-grid.module.css
@@ -28,6 +28,7 @@
   font-size: 1.75rem;
   color: var(--color-text-dark);
   text-overflow: ellipsis;
+  text-transform: uppercase;
 }
 .filter_icon {
   width: 1.35rem;
